--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 nannou = "0.18.1"
 nannou_osc = "0.18.0"
 circular-queue = "0.2.6"
+clap = { version = "3.2.8", features = ["derive"] }
