--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 nannou = "0.18.1"
 nannou_osc = "0.18.0"
-circular-queue = "0.2.6"
 clap = { version = "3.2.8", features = ["derive"] }
+
+# circular-queue = "0.2.6"
