--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,6 +3,9 @@
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
 
+[target.armv7-unknown-linux-gnueabihf]
+linker = "arm-linux-gnueabihf-gcc"
 
-[alias]
-build-rpi = "build --target=aarch64-unknown-linux-gnu --release"
+#[alias]
+#build-rpi = "build --target=aarch64-unknown-linux-gnu --release"
+#build-rpi = "build --target=armv7-unknown-linux-gnueabihf --release"
