--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# for profiling
+[profile.release]
+debug = true
+lto = "off"
+
 [dependencies]
 nannou = "0.18.1"
 nannou_osc = "0.18.0"
