--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# for profiling
-[profile.release]
-debug = true
-lto = "off"
-
 [dependencies]
-nannou = "0.18.1"
-nannou_osc = "0.18.0"
+#nannou = "0.18.1"
+#nannou_osc = "0.18.0"
 clap = { version = "3.2.8", features = ["derive"] }
+glium_rpi = { path = "glium_rpi" }
 
 # circular-queue = "0.2.6"
