--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "args": [
                     "build",
                     "--bin=rpi-rust",
-                    "--package=rpi-rust"
+                    "--package=rpi-rust",
                 ],
                 "filter": {
                     "name": "rpi-rust",
