--- a/glium_utils/Cargo.toml
+++ b/glium_utils/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "perf"
+name = "glium_utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+glium = "0.31.0"
+glam = "0.17.3"
