--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#nannou = "0.18.1"
-#nannou_osc = "0.18.0"
 clap = { version = "3.2.8", features = ["derive"] }
-glium_rpi = { path = "glium_rpi" }
-
-# pprof = { version = "0.10", features = ["flamegraph"] }
-
-# circular-queue = "0.2.6"
-
+glium_utils = { path = "glium_utils" }
 tracing = "0.1.35"
 tracing-subscriber = "0.3"
+palette = "0.6.0"
+nannou_osc = "0.18.0"
+rand = "0.8.5"
+
+# pprof = { version = "0.10", features = ["flamegraph"] }
+# circular-queue = "0.2.6"
