--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.8", features = ["derive"] }
+glium = "0.31.0"
 glium_utils = { path = "glium_utils" }
 tracing = "0.1.35"
 tracing-subscriber = "0.3"
@@ -15,6 +16,8 @@ nannou_osc = "0.18.0"
 rand = "0.8.5"
 egui_node_graph = "0.3.0"
 egui = "0.18.1"
+eframe = "0.18.0"
+egui_glium = "0.18.0"
 
 strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
