--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,7 @@ egui_glium = "0.18.0"
 strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
 
+slotmap = "1.0.6"
+
 # pprof = { version = "0.10", features = ["flamegraph"] }
 # circular-queue = "0.2.6"
