--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ eframe = "0.18.0"
 egui_glium = "0.18.0"
 ouroboros = "0.15.0"
 itertools = "0.10.2"
+isf = "0.1.0"
 
 strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
