--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.8", features = ["derive"] }
 glium = "0.31.0"
-glium_utils = { path = "glium_utils" }
-tracing = "0.1.35"
-tracing-subscriber = "0.3"
-palette = "0.6.0"
-nannou_osc = "0.18.0"
 rand = "0.8.5"
 egui_node_graph = "0.3.0"
 egui = "0.18.1"
@@ -27,5 +21,10 @@ strum = { version = "0.24", features = ["derive"] }
 
 slotmap = "1.0.6"
 
+# clap = { version = "3.2.8", features = ["derive"] }
+# tracing = "0.1.35"
+# tracing-subscriber = "0.3"
+# palette = "0.6.0"
+# nannou_osc = "0.18.0"
 # pprof = { version = "0.10", features = ["flamegraph"] }
 # circular-queue = "0.2.6"
