--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ isf = "0.1.0"
 gl = "0.14.0"
 
 spout_rust = { path = "./spout" }
+tri-mesh = "0.5.0"
+glam = "0.21.3"
 
 strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
