--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
 
 slotmap = "1.0.6"
+native-dialog = "0.6.3"
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
