--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ native-dialog = "0.6.3"
 enum_dispatch = "0.3.8"
 thiserror = "1.0.37"
 wavefront_obj = "10.0.0"
+glsl = "6.0.1"
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
