--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ thiserror = "1.0.37"
 wavefront_obj = "10.0.0"
 glsl = "6.0.1"
 
+bevy_ecs = "0.8.1"
+shred = "0.14.1"
+
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
 # tracing-subscriber = "0.3"
