--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ enum_dispatch = "0.3.8"
 thiserror = "1.0.37"
 wavefront_obj = "10.0.0"
 glsl = "6.0.1"
+naga = { version="0.10.0", features=["glsl-in"] }
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
