--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [target.'cfg(windows)'.dependencies]
-spout_rust = { path = "./spout" }
+spout_texture_share = { path = "./spout" }
 
-# [target.'cfg(macos)'.dependencies]
-# syphon_rust = { path = "./syphon" }
+[target.'cfg(macos)'.dependencies]
+syphon = { path = "./syphon" }
 
 [dependencies]
-glium = "0.31.0"
+glium = "0.32.0"
 rand = "0.8.5"
-egui_node_graph = {version="0.3.0", features=["persistence"]}
-egui = "0.18.1"
-eframe = "0.18.0"
-egui_glium = "0.18.0"
+egui_node_graph = {version="0.4.0", features=["persistence"]}
+egui = "0.19.0"
+eframe = "0.19.0"
+egui_glium = "0.19.0"
 ouroboros = "0.15.0"
 itertools = "0.10.2"
 isf = "0.1.0"
@@ -40,6 +40,7 @@ anyhow = "1.0.66"
 signal-hook = "0.3.14"
 serde_json = "1.0.87"
 serde = "1.0.147"
+meval = "0.2.0"
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
