--- a/ffgl/Cargo.toml
+++ b/ffgl/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "syphon"
+name = "ffgl"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-objc = "0.2.7"
 
 [build-dependencies]
 bindgen = "0.63.0"
-itertools = "0.10.5"
