failing to make vst rendering work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "nannou",
         "Srgb"
     ],
-    "autoHide.autoHideSideBar": false
+    "autoHide.autoHideSideBar": false,
+    "rust-analyzer.cargo.features": ["vst_plugin"]
 }
