--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "render-graph"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+vst_plugin = ["dep:vst", "dep:vst_window", "dep:raw-window-handle"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [target.'cfg(windows)'.dependencies]
@@ -42,6 +45,14 @@ serde_json = "1.0.87"
 serde = "1.0.147"
 meval = "0.2.0"
 delegate = "0.9.0"
+
+glutin = {version="0.30.6"}
+
+#vst_plugin
+vst = {version="0.3.0", optional=true}
+vst_window = {version="0.3.0", optional=true}
+raw-window-handle = {version="0.5.0", optional=true}
+
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
