--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,9 @@ actix-web = { version = "4", optional = true, features = ["macros"] }
 toml = "0.7.3"
 vectorize = "0.2.0"
 
+color-eyre = "0.5"
+partial_application = "0.2.1"
+
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
 # tracing-subscriber = "0.3"
