--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,8 @@ vectorize = "0.2.0"
 
 color-eyre = "0.5"
 partial_application = "0.2.1"
+try_utils = "0.1.2"
+graph = "0.3.0"
 
 # clap = { version = "3.2.8", features = ["derive"] }
 # tracing = "0.1.35"
