--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ isf = "0.1.0"
 
 strum_macros = "0.24"
 strum = { version = "0.24", features = ["derive"] }
+glam ={ version="0.24.1"}
 
 slotmap = "1.0.6"
 native-dialog = "0.6.3"
