--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,8 @@
     ],
     "autoHide.autoHideSideBar": false,
     "rust-analyzer.cargo.features": [
-        // "ffgl_plugin",
-        "editor",
+        "ffgl_plugin",
+        // "editor",
     ],
     
     "rust-analyzer.cargo.noDefaultFeatures": true,
