--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,10 @@
         "Srgb"
     ],
     "autoHide.autoHideSideBar": false,
-    "rust-analyzer.cargo.features": [
-        "ffgl_plugin",
-        // "editor",
-    ],
+    // "rust-analyzer.cargo.features": [
+    //     "ffgl_plugin",
+    //     // "editor",
+    // ],
     
     "rust-analyzer.cargo.noDefaultFeatures": true,
     // "rust-analyzer.cargo.features": [
