--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 
 [workspace]
-members = ["editor", "graph", "shaders", "common", "persistence"]
+members = ["editor", "graph", "shaders", "common", "persistence", "ffgl-lib"]
 
 [features]
 # default = ["editor"]
 vst_plugin = ["dep:vst", "dep:vst_window", "dep:raw-window-handle"]
-ffgl_plugin = ["dep:ffgl", "dep:gl_loader"]
+# ffgl_plugin = ["dep:ffgl", "dep:gl_loader"]
 webui = ["dep:leptos", "dep:actix-web"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,16 +27,11 @@ vst_window = { version = "0.3.0", optional = true }
 raw-window-handle = { version = "0.5.0", optional = true }
 
 
-ffgl = { path = "../ffgl-rs", optional = true }
-gl_loader = { version = "0.1.2", optional = true }
-
 # webui
 leptos = { version = "0.1.0", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 
 rand = "0.8.5"
-
-gl = "0.14.0"
 
 
 #vst_plugin
@@ -47,6 +42,9 @@ lazy_static = "1.4.0"
 
 delegate = "0.9.0"
 egui = { version = "0.19.0", features = ["bytemuck"] }
+emath = { version = "0.19.0", features = ["bytemuck"] }
+epaint = { version = "0.19.0", features = ["bytemuck"] }
+
 glutin = { version = "0.30.6" }
 color-eyre = "0.5"
 egui_node_graph = { version = "0.4.0", features = ["persistence"] }
