--- a/vst-lib/Cargo.toml
+++ b/vst-lib/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
+vst = { version = "0.3.0", optional = true }
+vst_window = { version = "0.3.0", optional = true }
+raw-window-handle = { version = "0.5.0", optional = true }
