--- a/ffgl-lib/Cargo.toml
+++ b/ffgl-lib/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "render_graph_lib"
 crate-type = ["cdylib"]
-panic = "unwind"
+panic = "abort"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,10 +13,14 @@ panic = "unwind"
 
 graph = { path = "../graph" }
 gl = "0.14.0"
+# ffgl = { git = "https://github.com/edeetee/ffgl-rs", version = "0.1.2" }
 ffgl = { path = "../../ffgl-rs" }
-gl_loader = { version = "0.1.2" }
+gl_loader = "0.1.2"
 itertools.workspace = true
 glium.workspace = true
 egui_node_graph.workspace = true
 common = { "path" = "../common" }
 persistence = { "path" = "../persistence" }
+
+
+# [patch."https://github.com/edeetee/ffgl-rs"]
