--- a/ffgl-lib/Cargo.toml
+++ b/ffgl-lib/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ffgl-lib"
 version = "0.1.0"
 edition = "2021"
+license.workspace = true
+authors.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
