--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -2,6 +2,8 @@
 name = "graph"
 version = "0.1.0"
 edition = "2021"
+license.workspace = true
+authors.workspace = true
 
 [lib]
 crate-type = ["dylib", "lib"]
