--- a/vst-lib/Cargo.toml
+++ b/vst-lib/Cargo.toml
@@ -2,6 +2,8 @@
 name = "vst-lib"
 version = "0.1.0"
 edition = "2021"
+license.workspace = true
+authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
