--- a/shaders/Cargo.toml
+++ b/shaders/Cargo.toml
@@ -2,7 +2,8 @@
 name = "shaders"
 version = "0.1.0"
 edition = "2021"
-
+license.workspace = true
+authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
